--- a/style.css
+++ b/style.css
@@ -58,11 +58,11 @@ li {
 }
 
 #kitty {
-    width: 100px;
+    width: 200px;
     height: auto;
-    border-radius: 50%;
     margin-top: 15px;
     box-shadow: 5px 5px 25px rgba(0,0,0,0.2);
+    border-radius: 10px;
 }
 
 .list-inline {
